Changes for client's suggestions + error handling

--- a/mobile.css
+++ b/mobile.css
@@ -6,3 +6,8 @@
         height: 60px;
     }
 }
+@media (max-width: 992px)  {
+    .navbar .container-fluid {
+        justify-content: flex-end;
+    }
+}
