--- a/style.css
+++ b/style.css
@@ -2,40 +2,46 @@
 
 .header-logo {
   height: 70px;
+  margin: 0 20px;
+  padding: 5px 0;
 }
 .header-logo-sf {
   height: 80px;
+  padding: 5px 0;
 }
 .lang-btn {
   margin: 0 5px;
   height: fit-content;
   width: 57px;
+  text-decoration: none;
+  color: #000000;
+  text-transform: uppercase;
+  font-size: large;
+}  
+
+/* Main */
+
+.bg-img {
+  background-image: url(https://voco.ee/wp-content/uploads/Untitled-design-2021-04-05T084608.083.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.bg-img2 {
+  background-image: url(pictures/taustapilt.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  border-radius: 15px;
 }
 
-.img {
-  object-fit: cover;
-}
-
-.pro-desc {
-  font-family: "Roboto Mono", monospace;
-  line-height: 1.2;
+.c-border {
+  border: 1px solid #000000;
+  border-radius: 15px;
 }
 
 /* Footer */
 
-.footer-content {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding-bottom: 15px;
-  margin-left: 50px;
-  margin-right: 50px;
-}
-.footer-text {
-  font-family: "Roboto Mono", monospace;
-  line-height: 1.2;
-  width: 60%;
-}
 footer div a img {
-  height: 70px;
+  height: 55px;
 }
